Set STRIPE_KEY environment variable in CI config
Add environment variable STRIPE_KEY for CI script.

--- a/v1/ci-test.yml
+++ b/v1/ci-test.yml
@@ -17,4 +17,6 @@ jobs:
       - name: Run a one-line script
         run: echo Hello from Octo Organization
         run: echo "API_KEY=sk_live_123456"
+env:
+  STRIPE_KEY: sk_live_51N8xxxxxxxxxxxxxxxx
 
