--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -91,6 +91,9 @@ jobs:
         echo '  make release'
         exit 1
 
+    - name: Attest Build Provenance
+      uses: actions/attest-build-provenance@v3.1.0
+    
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v4
       with:
