--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -38,6 +38,11 @@ jobs:
       # only required for workflows in private repositories
       actions: read
       contents: read
+      permissions:
+        id-token: write
+        contents: read
+        attestations: write
+
 
     strategy:
       fail-fast: false
@@ -54,6 +59,14 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      
+    - name: Attest Build Provenance
+      uses: actions/attest-build-provenance@v3.1.0
+    
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v4
+      with:
+        category: "/language:${{matrix.language}}"
 
     # Add any setup steps before running the `github/codeql-action/init` action.
     # This includes steps like installing compilers or runtimes (`actions/setup-node`
@@ -91,10 +104,3 @@ jobs:
         echo '  make release'
         exit 1
 
-    - name: Attest Build Provenance
-      uses: actions/attest-build-provenance@v3.1.0
-    
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v4
-      with:
-        category: "/language:${{matrix.language}}"
